# Orbit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
backend/: CMakeLists.txt  animation_params.hpp  backend.hpp  backend_factory.hpp  cpu_multi_threaded.cpp  cpu_multi_threaded.hpp  cpu_single_threaded.cpp  cpu_single_threaded.hpp  helper.hpp  render_params.hpp
benchmark/: CMakeLists.txt  benchmark_backends.cpp
cli/: CMakeLists.txt  cli.cpp  cli_color.cpp  cli_export_image.cpp  cli_export_image2.cpp  cli_export_video.cpp
color/: CMakeLists.txt  apply.cpp  apply.hpp  interpolation.hpp  interpolation_mode.hpp  palette.hpp  palette_presets.hpp  rgba.hpp
core/: CMakeLists.txt  complex.hpp  iterate.hpp  iteration_params.hpp  pixel_value.hpp
core/sets/: julia.hpp  mandelbrot.hpp  set.hpp
export/: CMakeLists.txt  animation_params.hpp  export_params.hpp  export_task.hpp  image_export.cpp  image_export.hpp  video_export.cpp  video_export.hpp
gui/: CMakeLists.txt  app.cpp  app.hpp  helper.hpp  main.cpp  renderer.cpp  renderer.hpp  ui.cpp  ui.hpp
render/: CMakeLists.txt
shaders/: fractal.frag  fractal.vert
tests/: CMakeLists.txt
tests/color/: test_interpolation.cpp  test_palette.cpp
tests/core/: test_complex.cpp  test_iterate.cpp  test_julia.cpp  test_mandelbrot.cpp
